starlark-rust/starlark/src/typing/tests/golden/new_syntax_without_dot_type.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
def foo(x: str): pass

def bar():
    # good
    foo("test")

    # bad
    foo(1)

Error:
error: Expected type `str` but got `int`
 --> filename:9:9
  |
9 |     foo(1)
  |         ^
  |

Compiler typechecker (eval):
error: Expected type `str` but got `int`
 --> filename:9:9
  |
9 |     foo(1)
  |         ^
  |
